--- a/index.html
+++ b/index.html
@@ -1,38 +1,41 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сучасна пекарня</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Сучасна пекарня</title>
+
+        <link rel="stylesheet" href="./css/styles.css"/>
+    </head>
+
     <body>
         <!--  -->
         <header>
             <nav>
-                <a href="#">
+                <a href="./index.html">
                     <img src="./images/logo.svg" alt="Логотип сучасної пекарні"/>
                 </a>
                 <ul>
-                    <li><a href="#">Франшиза</a></li>
-                    <li><a href="#">Наші традиції</a></li>
-                    <li><a href="#">Формати</a></li>
-                    <li><a href="#">Контакти</a></li>
+                    <li><a class="link" href="#traditions-section">Наші традиції</a></li>
+                    <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
+                    <li><a class="link" href="#formats-section">Формати</a></li>
+                    <li><a class="link" href="#contact-section">Контакти</a></li>
                 </ul>
             </nav>
-            <button type="button">Замовити дзвінок</button>
+            <button class="button" type="button">Замовити дзвінок</button>
         </header>
         <!--  -->
         <main>
             <section>
-                <h1>Сучасна пекарня</h1>
+                <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
             </section>
-            <section>
-                <ul>
+            <section id="traditions-section">
+                <ul class="advantages-list">
                     <li>Великий попит на ринку</li>
                     <li>Доступні за бюджетом формати</li>
                     <li>Досвідчена управлінська команда</li>
                 </ul>
-                <h2>Новий формат традицій</h2>
+                <h2 class="section-title">Новий формат традицій</h2>
                 <p>
                     <span> shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та натуральність інгредієнтів.
                 </p>
@@ -41,8 +44,8 @@
                 </p>
                 <img src="./images/baker-man.jpg" alt="Чоловік пекар дивиться на батони із посмішкою"/>
             </section>
-            <section>
-                <h2>Наші шеф-кухарі</h2>
+            <section id="chefs-section">
+                <h2 class="section-title">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
                 <ul>
                     <li>
                         <article>
@@ -64,8 +67,8 @@
                     </li>
                 </ul>
             </section>
-            <section>
-                <h2>Формати</h2>
+            <section id="formats-section">
+                <h2 class="section-title">Формати</h2>
                 <li>
                     <atricle>
                         <h3 lang="en">Walrus</h3>
@@ -82,8 +85,15 @@
                     </atricle>
                 </li>
             </section>
-            <section>
-                <h2>Приєднуйтеся до мережі пекарень</h2>
+            <section id="contact-section">
+                <h2 class="section-title">Приєднуйтеся до мережі пекарень</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d41896.36585007085!2d21.259878399999998!3d48.9816064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473ef29c8706cb4b%3A0xda28706c4dd50f7!2sKaufland%20Pre%C5%A1ov-S%C3%ADdlisko%203!5e0!3m2!1suk!2ssk!4v1699265147634!5m2!1suk!2ssk" 
+                    width="603"
+                    height="595"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
             </section>
         </main>
         <!--  -->
@@ -93,8 +103,8 @@
                     <img src="./images/logo.svg" alt="Логотип сучасної пекарні"/>
                 </a>
                 <ul>
-                    <li><a href="#">Франшиза</a></li>
                     <li><a href="#">Наші традиції</a></li>
+                    <li><a href="#">Шеф-кухарі</a></li>
                     <li><a href="#">Формати</a></li>
                     <li><a href="#">Контакти</a></li>
                 </ul>
@@ -108,7 +118,7 @@
                     <li><a href="#"></a>instagram</li>
                 </ul>
                 <a href="#" target="_blank">Політика кофіденційності</a>
-                <p>© 2022 Дані захищені</p>
+                <p>&copy; 2022 Дані захищені</p>
             </address>            
         </footer>
     </body>
